--- a/src/App.css
+++ b/src/App.css
@@ -1,42 +1,36 @@
-#root {
-  max-width: 1280px;
-  margin: 0 auto;
-  padding: 2rem;
-  text-align: center;
+.wrapper {
+  margin: 10px;
+  padding: 8px;
+  display: flex;
+  flex-direction: row;
+  border-radius: 16px;
+  box-shadow: 0 0 5px 0 grey;
+  background-color: white;
 }
 
-.logo {
-  height: 6em;
-  padding: 1.5em;
-  will-change: filter;
-  transition: filter 300ms;
-}
-.logo:hover {
-  filter: drop-shadow(0 0 2em #646cffaa);
-}
-.logo.react:hover {
-  filter: drop-shadow(0 0 2em #61dafbaa);
+.wrapper:hover {
+  background-color: lightgray;
 }
 
-@keyframes logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.image {
+  width: 50px;
+  height: 50px;
+  border-radius: 25px;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  a:nth-of-type(2) .logo {
-    animation: logo-spin infinite 20s linear;
-  }
+.contentontainer {
+  margin-left: 8px;
+  display: flex;
+  flex-direction: column;
+  align-items: left;
+  justify-content: center;
 }
-
-.card {
-  padding: 2em;
+.nameText {
+  color: lightblue;
+  font-weight: bold;
+  font-size: 16px;
 }
-
-.read-the-docs {
-  color: #888;
+.commentText {
+  color: black;
+  font-size: 16px;
 }
